added comments in example.config.env

--- a/example.config.env
+++ b/example.config.env
@@ -1,5 +1,10 @@
+# Host or IP of the postgres instance
 POSTGRES_HOST=
+# Port where postgres is running on
 POSTGRES_PORT=
+# Default postgres user
 POSTGRES_USER=
+# Default postgres password
 POSTGRES_PASSWORD=
+# Default postgres database
 POSTGRES_DB=
